--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Fromulario Web</h2>
             <table>
                 <tr>
-                    <td>Nombre:</td>
+                    <td>Nombre:</td>                    
                     <td><input type="text" name="txtNombre" id="txtNombre" required></td>
                 </tr>
                 <tr>
@@ -47,5 +47,6 @@
         </form>
     </aside>
     <footer id="pie"><h5>este es el espacio para el pie de pagina</h5></footer>
+    <script src="app.js"></script>
 </body>
 </html>
