modifique el contenido del articulo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="seccion">
         <article class="articulo"><h2>Manejo de las herramientas</h2><p class="parrafo1">Lorem ipsum dolor, <span class="sub"> amet consectetur </span> adipisicing elit. Deleniti at quisquam incidunt numquam, nesciunt ducimus fugit assumenda officiis iure, dicta dolor enim architecto aliquid. Assumenda beatae blanditiis itaque similique laboriosam!</p></article>
         <article class="articulo"><h2>Manejo de base de datos</h2><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores tempore dicta facilis earum, perferendis nemo quis rem veritatis suscipit quam, blanditiis aperiam. Assumenda repellendus sunt debitis, non error distinctio dolore.</p></article>   
-        <article id="productos" class="articulo"><h2>Manejo de programación</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex velit corrupti iusto quisquam, ullam inventore obcaecati iste voluptatem ducimus facere itaque error nam vel deserunt eum aperiam vero ipsum molestiae.</p></article>  
+        <article id="productos" class="articulo"><h2>Manejo de programación</h2><p>este es el parrafo inicial Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex velit corrupti iusto quisquam, ullam inventore obcaecati iste voluptatem ducimus facere itaque error nam vel deserunt eum aperiam vero ipsum molestiae.</p></article>  
     </section>
     <aside id="lateral">
         <form action="" name="formulario">
